# intelligent-document-redactor

./: .coverage  README.md  main.py  pyproject.toml
resources/: stats.txt
tests/: test_load_nlp_models.py  test_parse_arguments.py  test_redact_pdf.py  test_write_stats.py
