[project]
name = "cis6930sp25-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "fastcoref>=2.1.6",
    "pip>=25.0.1",
    "pymupdf>=1.25.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "setuptools>=78.1.0",
    "spacy>=3.8.5",
    "spacy-transformers>=1.3.8",
    "thinc[torch]>=8.3.6",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "wheel>=0.45.1",
]
